WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261461
getUserMedia with constraints where max frameRate bigger than 16 does not work
https://bugs.webkit.org/show_bug.cgi?id=261461
Summary
getUserMedia with constraints where max frameRate bigger than 16 does not work
ivanova.m241
Reported
2023-09-12 01:47:19 PDT
Created
attachment 467657
[details]
getUserMedia was called with max frameRate 16, but it does not work getUserMedia with constraints where max frameRate bigger than 16 does not work repro can be done here
https://webrtc.github.io/samples/src/content/peerconnection/old-new-stats/
1. set max frameRate for any value starting from 16 2. press getUserMedia button, then connect 3. in Safari max frameRate constraint doesn't work (to check framerate value in Safari verbose webrtc logging should be enabled)
Attachments
getUserMedia was called with max frameRate 16, but it does not work
(463.80 KB, application/zip)
2023-09-12 01:47 PDT
,
ivanova.m241
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-19 01:48:13 PDT
<
rdar://problem/115713922
>
Ketija
Comment 2
2025-09-18 05:15:04 PDT
Hi! Still reproducible with: - MacBook Pro (M1, 2020, macOS 15.7) and Safari V26.0.1 (20622.1.22.118.4)
Ketija
Comment 3
2026-01-15 04:26:20 PST
Hi! Is there progress on the issue? Bug is still reproducible. Tested devices and browsers: - MacBook Pro (M1, 2020, macOS 26.2) and Safari V 26.2 (21623.1.14.11.9) Repro can be done here -
https://webrtc.github.io/samples/src/content/peerconnection/constraints/
1. set max frameRate for any value starting from 16 2. press getUserMedia button, then connect 3. in Safari max frameRate constraint doesn't work
youenn fablet
Comment 4
2026-01-16 02:48:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56700
EWS
Comment 5
2026-01-20 00:08:23 PST
Committed
305858@main
(e27ac61ee273): <
https://commits.webkit.org/305858@main
> Reviewed commits have been landed. Closing PR #56700 and removing active labels.
Ketija
Comment 6
2026-03-16 02:08:54 PDT
Hi! Bug is still reproducible. Please reopen this ticket for further investigation. If needed, a new ticket can be created. Tested devices and browsers: - MacBook Pro ( M1, 2020, macOS 26.3.1) and Safari V 26.3.1 (21623.2.7.11.7) Repro can be done here -
https://webrtc.github.io/samples/src/content/peerconnection/constraints/
1. set max frameRate for any value starting from 16 2. press getUserMedia button, then connect 3. in Safari max frameRate constraint doesn't work
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug