Cherry-pick e27ac61ee273. rdar://168580521

getUserMedia with constraints where max frameRate bigger than 16 does not work
    rdar://115713922
    https://bugs.webkit.org/show_bug.cgi?id=261461

    Reviewed by Eric Carlson.

    Instead of trying to set the frame rate on the device, which is the only way on iOS, we set the frame rate on the output connection in macOS.
    Manually tested using https://codepen.io/youennf/pen/OPXWqGV.

    Canonical link: https://commits.webkit.org/305858@main

Identifier: 305413.80@safari-7624-branch